src/objects/BonusDetail__c.object
<CustomObject>
    <description>Additional terms for an artist or co-promoter usually based upon ticket sales representing a bonus above a guarantee or percentage of ticket revenues</description>
    <fields>
        <fullName>ApplyTo__c</fullName>
        <label>Apply To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Guarantee</fullName>
                </value>
                <value>
                    <fullName>Regardless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArtistBonusExplanation__c</fullName>
        <label>Artist Bonus Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BonusAmount__c</fullName>
        <label>Bonus Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BonusBase__c</fullName>
        <label>Bonus Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid Tickets</fullName>
                </value>
                <value>
                    <fullName>Drop Count</fullName>
                </value>
                <value>
                    <fullName>Net Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BonusPotentialatProjectionRetro__c</fullName>
        <formula>if(ispickval(Type__c, &quot;Retro&quot;),
case( BonusBase__c,
&quot;Paid Tickets&quot;,
	if(
		and(
			Deal__r.Event__r.ProjectedPaidTickets__c &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.ProjectedPaidTickets__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		/* true */
		FLOOR((Deal__r.Event__r.ProjectedPaidTickets__c)/ Increment__c) *  BonusAmount__c,
		/* false */
		0
	),
&quot;Drop Count&quot;,
	/* retro / drop count */
	if(
		and(
			Deal__r.Event__r.ProjectedDropCount__c  &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.ProjectedDropCount__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		/* true */
		FLOOR((Deal__r.Event__r.ProjectedDropCount__c)/ Increment__c) *  BonusAmount__c,
		/* false */
		0
	),
&quot;Net Gross&quot;,
        /* retro/ net gross */
	if(
		and(
			Deal__r.Event__r.ProjectedNetGross__c  &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.ProjectedNetGross__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		/* true */
		FLOOR((Deal__r.Event__r.ProjectedNetGross__c)/ Increment__c) *  BonusAmount__c,
		/* false */
		0
	),
/* else */
	/* retro / not paid tickets-DropCount-NetGross */
	0
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Potential at Projection - Retro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BonusPotentialatProjectionStepUp__c</fullName>
        <formula>if(ispickval(Type__c, &quot;Step Up&quot;),
case( BonusBase__c,
&quot;Paid Tickets&quot;,
	if(
		and(
			Deal__r.Event__r.ProjectedPaidTickets__c &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.ProjectedPaidTickets__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		if( Deal__r.Event__r.ProjectedPaidTickets__c &lt;= EndPoint__c || EndPoint__c = 0,
			/* true */
			FLOOR((Deal__r.Event__r.ProjectedPaidTickets__c -  StartPoint__c + 1)/ Increment__c) *  BonusAmount__c,
			/* false */
			FLOOR(( EndPoint__c -  StartPoint__c + 1)/Increment__c) *  BonusAmount__c
		),
		0
	),
&quot;Drop Count&quot;,
	if(
		and(
			Deal__r.Event__r.ProjectedDropCount__c  &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.ProjectedDropCount__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		if( Deal__r.Event__r.ProjectedDropCount__c &lt;= EndPoint__c || EndPoint__c = 0,
			/* true */
			FLOOR((Deal__r.Event__r.ProjectedDropCount__c -  StartPoint__c + 1)/ Increment__c) *  BonusAmount__c,
			/* false */
			FLOOR(( EndPoint__c -  StartPoint__c + 1)/Increment__c) *  BonusAmount__c
		),
		0
        ),
&quot;Net Gross&quot;,
	if(
		and(
			 Deal__r.Event__r.ProjectedNetGross__c  &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.ProjectedNetGross__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		if( Deal__r.Event__r.ProjectedNetGross__c &lt;= EndPoint__c || EndPoint__c = 0,
			/* true */
			FLOOR((Deal__r.Event__r.ProjectedNetGross__c -  StartPoint__c + 1)/ Increment__c) *  BonusAmount__c,
			/* false */
			FLOOR(( EndPoint__c -  StartPoint__c + 1)/Increment__c) *  BonusAmount__c
		),
		0
	),
/* else */
	0
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Potential at Projection - Step Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BonusPotentialatProjection__c</fullName>
        <label>Bonus Potential at Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BonusPotentialatSelloutRetro__c</fullName>
        <formula>if(ispickval(Type__c, &quot;Retro&quot;),
case( BonusBase__c,
&quot;Paid Tickets&quot;,
	if(
		and(
			Deal__r.Event__r.SelloutPaidTickets__c &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.SelloutPaidTickets__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		/* true */
		FLOOR((Deal__r.Event__r.SelloutPaidTickets__c)/ Increment__c) *  BonusAmount__c,
		/* false */
		0
	),
&quot;Drop Count&quot;,
	/* retro / drop count */
	if(
		and(
			Deal__r.Event__r.SelloutDropCount__c  &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.SelloutDropCount__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		/* true */
		FLOOR((Deal__r.Event__r.SelloutDropCount__c)/ Increment__c) *  BonusAmount__c,
		/* false */
		0
	),
&quot;Net Gross&quot;,
        /* retro/ net gross */
	if(
		and(
			Deal__r.Event__r.NetGrossPotential__c  &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.NetGrossPotential__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		/* true */
		FLOOR((Deal__r.Event__r.NetGrossPotential__c)/ Increment__c) *  BonusAmount__c,
		/* false */
		0
	),
/* else */
	/* retro / not paid tickets-DropCount-NetGross */
	0
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Potential at Sellout - Retro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BonusPotentialatSelloutStepUp__c</fullName>
        <formula>if(ispickval(Type__c, &quot;Step Up&quot;),
case( BonusBase__c,
&quot;Paid Tickets&quot;,
	if(
		and(
			Deal__r.Event__r.SelloutPaidTickets__c &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.SelloutPaidTickets__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		if( Deal__r.Event__r.SelloutPaidTickets__c &lt;= EndPoint__c || EndPoint__c = 0,
			/* true */
			FLOOR((Deal__r.Event__r.SelloutPaidTickets__c -  StartPoint__c + 1)/ Increment__c) *  BonusAmount__c,
			/* false */
			FLOOR(( EndPoint__c -  StartPoint__c + 1)/Increment__c) *  BonusAmount__c
		),
		0
	),
&quot;Drop Count&quot;,
	if(
		and(
			Deal__r.Event__r.SelloutDropCount__c  &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.SelloutDropCount__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		if( Deal__r.Event__r.SelloutDropCount__c &lt;= EndPoint__c || EndPoint__c = 0,
			/* true */
			FLOOR((Deal__r.Event__r.SelloutDropCount__c -  StartPoint__c + 1)/ Increment__c) *  BonusAmount__c,
			/* false */
			FLOOR(( EndPoint__c -  StartPoint__c + 1)/Increment__c) *  BonusAmount__c
		),
		0
        ),
&quot;Net Gross&quot;,
	if(
		and(
			 Deal__r.Event__r.NetGrossPotential__c  &gt;=  StartPoint__c,
			OR(Deal__r.Event__r.NetGrossPotential__c &lt;=  EndPoint__c, EndPoint__c = 0)
		),
		if( Deal__r.Event__r.NetGrossPotential__c &lt;= EndPoint__c || EndPoint__c = 0,
			/* true */
			FLOOR((Deal__r.Event__r.NetGrossPotential__c -  StartPoint__c + 1)/ Increment__c) *  BonusAmount__c,
			/* false */
			FLOOR(( EndPoint__c -  StartPoint__c + 1)/Increment__c) *  BonusAmount__c
		),
		0
	),
/* else */
	0
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Potential at Sellout - Step Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BonusPotentialatSellout__c</fullName>
        <label>Bonus Potential at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Bonus Details</relationshipLabel>
        <relationshipName>BonusDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>End Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Increment__c</fullName>
        <label>Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentEventId__c</fullName>
        <formula>Deal__r.Event__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Event Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettlementBonusRetro__c</fullName>
        <formula>if(ispickval(Type__c, &quot;Retro&quot;),
case( BonusBase__c,
&quot;Paid Tickets&quot;,
if(
and(
Deal__r.Event__r.SettlementPaidTickets__c &gt;= StartPoint__c,
OR(Deal__r.Event__r.SettlementPaidTickets__c &lt;= EndPoint__c, EndPoint__c = 0)
),
/* true */
FLOOR((Deal__r.Event__r.SettlementPaidTickets__c)/ Increment__c) * BonusAmount__c,
/* false */
0
),
&quot;Drop Count&quot;,
/* retro / drop count */
if(
and(
Deal__r.Event__r.ActualDropCount__c &gt;= StartPoint__c,
OR(Deal__r.Event__r.ActualDropCount__c &lt;= EndPoint__c, EndPoint__c = 0)
),
/* true */
FLOOR((Deal__r.Event__r.ActualDropCount__c)/ Increment__c) * BonusAmount__c,
/* false */
0
),
&quot;Net Gross&quot;,
/* retro/ net gross */
if(
and(
Deal__r.Event__r.SettlementNetGross__c &gt;= StartPoint__c,
OR(Deal__r.Event__r.SettlementNetGross__c &lt;= EndPoint__c, EndPoint__c = 0)
),
/* true */
FLOOR((Deal__r.Event__r.SettlementNetGross__c)/ Increment__c) * BonusAmount__c,
/* false */
0
),
/* else */
/* retro / not paid tickets-DropCount-NetGross */
0
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Bonus - Retro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementBonusStepUp__c</fullName>
        <formula>if(ispickval(Type__c, &quot;Step Up&quot;),
case( BonusBase__c,
&quot;Paid Tickets&quot;,
if(
and(
 Deal__r.Event__r.SettlementPaidTickets__c &gt;= StartPoint__c,
OR( Deal__r.Event__r.SettlementPaidTickets__c &lt;= EndPoint__c, EndPoint__c = 0)
),
if( Deal__r.Event__r.SettlementPaidTickets__c &lt;= EndPoint__c || EndPoint__c = 0,
/* true */
FLOOR(( Deal__r.Event__r.SettlementPaidTickets__c - StartPoint__c + 1)/ Increment__c) * BonusAmount__c,
/* false */
FLOOR(( EndPoint__c - StartPoint__c + 1)/Increment__c) * BonusAmount__c
),
0
),
&quot;Drop Count&quot;,
if(
and(
Deal__r.Event__r.ActualDropCount__c &gt;= StartPoint__c,
OR(Deal__r.Event__r.ActualDropCount__c &lt;= EndPoint__c, EndPoint__c = 0)
),
if( Deal__r.Event__r.ActualDropCount__c &lt;= EndPoint__c || EndPoint__c = 0,
/* true */
FLOOR((Deal__r.Event__r.ActualDropCount__c - StartPoint__c + 1)/ Increment__c) * BonusAmount__c,
/* false */
FLOOR(( EndPoint__c - StartPoint__c + 1)/Increment__c) * BonusAmount__c
),
0
),
&quot;Net Gross&quot;,
if(
and(
Deal__r.Event__r.SettlementNetGross__c
 &gt;= StartPoint__c,
OR(Deal__r.Event__r.SettlementNetGross__c
 &lt;= EndPoint__c, EndPoint__c = 0)
),
if( Deal__r.Event__r.SettlementNetGross__c &lt;= EndPoint__c || EndPoint__c = 0,
/* true */
FLOOR((Deal__r.Event__r.SettlementNetGross__c
 - StartPoint__c + 1)/ Increment__c) * BonusAmount__c,
/* false */
FLOOR(( EndPoint__c - StartPoint__c + 1)/Increment__c) * BonusAmount__c
),
0
),
/* else */
0
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Bonus - Step Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementBonus__c</fullName>
        <label>Settlement Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StartPoint__c</fullName>
        <label>Start Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartPointlessonother__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the start point is less than the end point on other records with a lesser starting point</description>
        <label>Start Point less on other?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step Up</fullName>
                </value>
                <value>
                    <fullName>Retro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fxBonusAmount__c</fullName>
        <formula>(BonusAmount__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Bonus Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBonusPotentialatProjectionRetro__c</fullName>
        <formula>(BonusPotentialatProjectionRetro__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Bonus Poten. at Projection - Retro (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBonusPotentialatProjectionStepUp__c</fullName>
        <formula>(BonusPotentialatProjectionStepUp__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Bonus Potential at Proj. - Step Up (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBonusPotentialatProjection__c</fullName>
        <formula>(BonusPotentialatProjection__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Bonus Potential at Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBonusPotentialatSelloutRetro__c</fullName>
        <formula>(BonusPotentialatSelloutRetro__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Bonus Potential at Sellout - Retro (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBonusPotentialatSelloutStepUp__c</fullName>
        <formula>(BonusPotentialatSelloutStepUp__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Bonus Poten. at Sellout - Step Up (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBonusPotentialatSellout__c</fullName>
        <formula>(BonusPotentialatSellout__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Bonus Potential at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementBonusRetro__c</fullName>
        <formula>(SettlementBonusRetro__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Bonus - Retro (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementBonusStepUp__c</fullName>
        <formula>(SettlementBonusStepUp__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Bonus - Step Up (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementBonus__c</fullName>
        <formula>(SettlementBonus__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Bonus (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bonus Detail</label>
    <nameField>
        <displayFormat>BD-{000000}</displayFormat>
        <label>Bonus Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LNE_EndPoint</fullName>
        <active>true</active>
        <description>End point must be greater than the start point.</description>
        <errorConditionFormula>EndPoint__c &lt; StartPoint__c &amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>EndPoint__c</errorDisplayField>
        <errorMessage>End point must be greater than the start point.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_StartPointlessonother</fullName>
        <active>false</active>
        <description>If &apos;Start Point less on other?&apos; is checked, then can&apos;t save record.</description>
        <errorConditionFormula>StartPointlessonother__c = TRUE &amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorMessage>Bonus records may not overlap between their start points and end points. Please review and correct.</errorMessage>
    </validationRules>
</CustomObject>